--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 8000
-db_URL = mongodb://127.0.0.1:27017/instgram
+# db_URL = mongodb://127.0.0.1:27017/instgram
+db_URL = mongodb+srv://demo:demodemo@cluster0.zneraq0.mongodb.net/test
 back_URL = http://localhost:8000/
 IMAGES_PATH=./upload
